--- a/2_run_reinvent.ipynb
+++ b/2_run_reinvent.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4febecaa",
    "metadata": {},
    "outputs": [],
@@ -133,10 +133,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2793f53b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "slogp_max.toml structure:\n",
+      "============================================================\n",
+      "\n",
+      "1. TOP-LEVEL SETTINGS:\n",
+      "   run_type: staged_learning\n",
+      "   device: cpu\n",
+      "   tb_logdir: output/tb_logs\n",
+      "\n",
+      "2. PARAMETERS [parameters]:\n",
+      "   agent_file: priors/reinvent.prior\n",
+      "   prior_file: priors/reinvent.prior\n",
+      "   batch_size: 64\n",
+      "   randomize_smiles: True\n",
+      "\n",
+      "3. LEARNING STRATEGY [learning_strategy]:\n",
+      "   type: dap\n",
+      "   sigma: 128.0\n",
+      "   rate (learning rate): 0.0001\n",
+      "\n",
+      "4. STAGE CONFIGURATION [[stage]]:\n",
+      "   max_steps: 200\n",
+      "   termination: simple\n",
+      "   chkpt_file: output/run.chkpt\n",
+      "\n",
+      "5. SCORING FUNCTION [stage.scoring]:\n",
+      "   type: geometric_mean (how component scores are combined)\n",
+      "\n",
+      "6. SCORING COMPONENTS [[stage.scoring.component]]:\n",
+      "   Component 1: SlogP\n",
+      "      - name: SlogP\n",
+      "      - weight: 1.0\n",
+      "      - transform: sigmoid\n",
+      "        (low=0.0, high=12.0, k=1.0)\n",
+      "        → Rewards HIGHER values in the range\n",
+      "\n",
+      "============================================================\n",
+      "KEY CONCEPT:\n",
+      "============================================================\n",
+      "Each component: raw property → transform to [0,1] → weight → combine → final Score\n",
+      "The final Score is used as the reward signal for reinforcement learning.\n"
+     ]
+    }
+   ],
    "source": [
     "# For reading TOML files\n",
     "try:\n",
@@ -234,10 +282,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56547a8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "druglike.toml - Multi-objective scoring function\n",
+      "============================================================\n",
+      "\n",
+      "Scoring type: geometric_mean\n",
+      "  → geometric_mean means: if ANY component is ~0, the whole score drops.\n",
+      "  → This rewards BALANCED drug-like profiles, not extreme single properties.\n",
+      "\n",
+      "Number of scoring components: 8\n",
+      "\n",
+      "Components:\n",
+      "1. MW (weight=1.0)\n",
+      "   Property: MolecularWeight\n",
+      "   Transform: double_sigmoid\n",
+      "   → Rewards values in range [200.0, 400.0]\n",
+      "\n",
+      "2. SlogP (weight=1.0)\n",
+      "   Property: SlogP\n",
+      "   Transform: double_sigmoid\n",
+      "   → Rewards values in range [0.0, 4.0]\n",
+      "\n",
+      "3. HBD (weight=1.0)\n",
+      "   Property: HBondDonors\n",
+      "   Transform: reverse_sigmoid\n",
+      "   → Rewards values ≤ 4.0 (penalizes above 4.0)\n",
+      "\n",
+      "4. HBA (weight=1.0)\n",
+      "   Property: HBondAcceptors\n",
+      "   Transform: reverse_sigmoid\n",
+      "   → Rewards values ≤ 6.0 (penalizes above 6.0)\n",
+      "\n",
+      "5. TPSA (weight=1.0)\n",
+      "   Property: TPSA\n",
+      "   Transform: double_sigmoid\n",
+      "   → Rewards values in range [20.0, 120.0]\n",
+      "\n",
+      "6. QED (weight=1.0)\n",
+      "   Property: Qed\n",
+      "   Transform: sigmoid\n",
+      "   → Rewards values ≥ 0.5 (up to 1.0)\n",
+      "\n",
+      "7. SA (weight=1.0)\n",
+      "   Property: SAScore\n",
+      "   Transform: reverse_sigmoid\n",
+      "   → Rewards values ≤ 6.0 (penalizes above 6.0)\n",
+      "\n",
+      "8. AromRings (weight=1.0)\n",
+      "   Property: NumAromaticRings\n",
+      "   Transform: reverse_sigmoid\n",
+      "   → Rewards values ≤ 4.0 (penalizes above 4.0)\n",
+      "\n",
+      "============================================================\n",
+      "DIVERSITY FILTER:\n",
+      "============================================================\n",
+      "Type: IdenticalMurckoScaffold\n",
+      "Purpose: Prevents the model from spamming one chemotype\n",
+      "  - Groups molecules by Murcko scaffold\n",
+      "  - Limits high-scoring molecules per scaffold to 25\n",
+      "  - Applies penalty multiplier 0.5 for overused scaffolds\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# For reading TOML files\n",
     "try:\n",
@@ -773,7 +888,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "reinvent4",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
