--- a/1_intro_to_rdkit.ipynb
+++ b/1_intro_to_rdkit.ipynb
@@ -5,7 +5,7 @@
    "id": "8cc9a9b5-8e9d-41e5-a0ae-1a935cf0bc48",
    "metadata": {},
    "source": [
-    "# Introduction to RDKit\n",
+    "# Part 1: Introduction to RDKit\n",
     "\n",
     "This notebook is a hands-on introduction to basic cheminformatics with RDKit which is the most popular open source packages for cheminformatics and molecular representation.\n",
     "\n",
