--- a/4_cure_zika.ipynb
+++ b/4_cure_zika.ipynb
@@ -1,6 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7d3c7f8e-aeac-407f-b575-79b9440466f8",
+   "metadata": {},
+   "source": [
+    "## Part 4: Designing improved inhibitors for the Zika virus NS2B–NS3 protease (PDB: 7I9O) 🦟❌\n",
+    "\n",
+    "Following Part 3 where we introduced the NS2B-NS3 protease target and the resolved inhibitor (PDB: 7I9O), in this notebook you will make your own decisions acting as an early-stage antiviral drug designer. The following information was already defined in Part 2 but included to remind you again.\n",
+    "\n",
+    "Our biological target is the **Zika virus NS2B–NS3 protease**, a serine protease formed by the NS3 catalytic domain together with its NS2B cofactor. This protease is essential for ZIKV replication because it cleaves the viral polyprotein into the individual structural and non-structural proteins the virus needs to assemble and replicate, which makes it a high-value antiviral target. ([Nature][1])\n",
+    "We will use the experimentally solved crystal structure **7I9O**, which captures the ZIKV NS2B–NS3 protease bound to a small-molecule inhibitor. ([rcsb.org][2])\n",
+    "\n",
+    "You are given a **core scaffold** derived from a weak hit in that pocket. The atoms in the core are “locked”: we assume they are important for binding. Certain positions on the scaffold are marked with `*`. Those `*` positions are attachment points where we are allowed to grow new **R-groups** to make the molecule bind better and look more like a viable lead.\n",
+    "\n",
+    "We will use **LibINVENT**, a scaffold-decorator model, to explore these R-groups. LibINVENT proposes substituents for the `*` sites and we will train/steer it with reinforcement learning. The key lever you control is the **scoring function** in `zika.toml`: you will define what “good” means (for example: reasonable molecular weight, acceptable physicochemical properties, no obvious liabilities, etc.), and LibINVENT will try to generate molecules that satisfy that profile.\n",
+    "\n",
+    "Your workflow in this notebook following the same flow as Part 2 with many spots for tweaking:\n",
+    "\n",
+    "1. **Define a scoring function**\n",
+    "   Edit the TOML so that high score = “this looks like a plausible NS2B–NS3 protease inhibitor and a drug-like small molecule”.\n",
+    "2. **Generate candidates with LibINVENT**\n",
+    "   Run RL to sample decorated molecules starting from the given scaffold.\n",
+    "3. **Triage / down-select**\n",
+    "   You cannot dock thousands of structures. You should prioritise and filter the generated molecules (chemistry sanity, diversity, properties) and choose at most ~100 molecules that are worth docking into 7I9O.\n",
+    "4. **Nominate synthesis candidates**\n",
+    "   From the docked / prioritised set, choose your final **top 10 compounds**. These 10 are the ones you would hand to medicinal chemistry as proposed “next-step” lead ideas against the Zika NS2B–NS3 protease. Use py3Dmol to calculate interactions and use in your proposal!!\n",
+    "\n",
+    "[1]: https://www.nature.com/articles/s41467-025-63602-z?utm_source=chatgpt.com \"Combined crystallographic fragment screening and deep ...\"\n",
+    "[2]: https://www.rcsb.org/structure/7i9o?utm_source=chatgpt.com \"7I9O: Group deposition of ZIKV NS2B-NS3 protease in ...\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f78fa18",
+   "metadata": {},
+   "source": [
+    "### Reminder on files to use:\n",
+    "\n",
+    "- `data/scaffold.smi` - Scaffold with `*` attachment points for R-group decoration\n",
+    "- `data/7I9O-receptor.pdb` / `data/7I9O-receptor.pdbqt` - Receptor structure for docking\n",
+    "- `data/7I9O-ligand.sdf` - Original inhibitor ligand (reference structure)\n",
+    "- `config/zika.toml` - Template for scoring function configuration for LibINVENT RL training\n",
+    "- `priors/libinvent.prior` - LibINVENT prior model\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1a0197ed",
@@ -48,50 +93,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7d3c7f8e-aeac-407f-b575-79b9440466f8",
-   "metadata": {},
-   "source": [
-    "## Designing improved inhibitors for the Zika virus NS2B–NS3 protease (PDB: 7I9O) 🦟❌\n",
-    "\n",
-    "In this notebook we will act as an early-stage antiviral design team.\n",
-    "Our biological target is the **Zika virus NS2B–NS3 protease**, a serine protease formed by the NS3 catalytic domain together with its NS2B cofactor. This protease is essential for ZIKV replication because it cleaves the viral polyprotein into the individual structural and non-structural proteins the virus needs to assemble and replicate, which makes it a high-value antiviral target. ([Nature][1])\n",
-    "We will use the experimentally solved crystal structure **7I9O**, which captures the ZIKV NS2B–NS3 protease bound to a small-molecule inhibitor. ([rcsb.org][2])\n",
-    "\n",
-    "You are given a **core scaffold** derived from a weak hit in that pocket. The atoms in the core are “locked”: we assume they are important for binding. Certain positions on the scaffold are marked with `*`. Those `*` positions are attachment points where we are allowed to grow new **R-groups** to make the molecule bind better and look more like a viable lead.\n",
-    "\n",
-    "We will use **LibINVENT**, a scaffold-decorator model, to explore these R-groups. LibINVENT proposes substituents for the `*` sites and we will train/steer it with reinforcement learning. The key lever you control is the **scoring function** in `zika.toml`: you will define what “good” means (for example: reasonable molecular weight, acceptable physicochemical properties, no obvious liabilities, etc.), and LibINVENT will try to generate molecules that satisfy that profile.\n",
-    "\n",
-    "Your workflow in this notebook following the same flow as the previous one with many spots for tweaking:\n",
-    "\n",
-    "1. **Define a scoring function**\n",
-    "   Edit the TOML so that high score = “this looks like a plausible NS2B–NS3 protease inhibitor and a drug-like small molecule”.\n",
-    "2. **Generate candidates with LibINVENT**\n",
-    "   Run RL to sample decorated molecules starting from the given scaffold.\n",
-    "3. **Triage / down-select**\n",
-    "   You cannot dock thousands of structures. You should prioritise and filter the generated molecules (chemistry sanity, diversity, properties) and choose at most ~100 molecules that are worth docking into 7I9O.\n",
-    "4. **Nominate synthesis candidates**\n",
-    "   From the docked / prioritised set, choose your final **top 10 compounds**. These 10 are the ones you would hand to medicinal chemistry as proposed “next-step” lead ideas against the Zika NS2B–NS3 protease.\n",
-    "\n",
-    "[1]: https://www.nature.com/articles/s41467-025-63602-z?utm_source=chatgpt.com \"Combined crystallographic fragment screening and deep ...\"\n",
-    "[2]: https://www.rcsb.org/structure/7i9o?utm_source=chatgpt.com \"7I9O: Group deposition of ZIKV NS2B-NS3 protease in ...\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "16cecbe8-9209-48cc-92cd-59f1863270da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure output dir exists\n",
-    "Path(\"output\").mkdir(exist_ok=True)\n",
-    "\n",
-    "CONFIG_PATH = Path(\"config/zika.toml\").resolve()\n",
-    "LOG_PATH    = Path(\"output/zika.log\").resolve()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "24885ef4",
@@ -100,19 +101,11 @@
    "source": [
     "# Continue!!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96486711-b95a-4b70-98cb-45052163b0a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "reinvent4",
    "language": "python",
    "name": "python3"
   },
