--- a/4_cure_zika.ipynb
+++ b/4_cure_zika.ipynb
@@ -82,12 +82,7 @@
     "# Disable RDKit warnings\n",
     "RDLogger.DisableLog('rdApp.*')\n",
     "\n",
-    "# Set thread limits for compatibility\n",
-    "os.environ[\"OMP_NUM_THREADS\"] = \"1\"\n",
-    "os.environ[\"MKL_NUM_THREADS\"] = \"1\"\n",
-    "os.environ[\"OPENBLAS_NUM_THREADS\"] = \"1\"\n",
-    "\n",
-    "# Import MDAnalysis and prolif after setting thread limits\n",
+    "# Import MDAnalysis and prolif\n",
     "import MDAnalysis as mda\n",
     "import prolif"
    ]
